antflow/antflow-deployment.yml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "6"
    field.cattle.io/creatorId: user-s69hv
    field.cattle.io/publicEndpoints: '[{"port":32644,"protocol":"TCP","serviceName":"kube-snake:antflow-nodeport","allNodes":true}]'
    kubernetes.io/change-cause: kubectl set image deployment/antflow antflow=registry.cn-hangzhou.aliyuncs.com/ly_ops/antflow:0.1.13
      --namespace=kube-snake --record=true
  creationTimestamp: 2018-06-08T03:58:07Z
  generation: 10
  labels:
    workload.user.cattle.io/workloadselector: deployment-kube-snake-antflow
  name: antflow
  namespace: kube-snake
  resourceVersion: "19321531"
  selfLink: /apis/apps/v1beta2/namespaces/kube-snake/deployments/antflow
  uid: 2749b9aa-6ad0-11e8-8cbc-5254006c1109
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      workload.user.cattle.io/workloadselector: deployment-kube-snake-antflow
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        field.cattle.io/ports: '[[{"containerPort":8000,"dnsName":"antflow-nodeport","kind":"NodePort","name":"8000tcp01","protocol":"TCP","sourcePort":0}]]'
      creationTimestamp: null
      labels:
        service-type: ops-antflow
        workload.user.cattle.io/workloadselector: deployment-kube-snake-antflow
    spec:
      containers:
      - args:
        - python
        - manage.py
        - runserver
        - 0.0.0.0:8000
        image: registry.cn-hangzhou.aliyuncs.com/ly_ops/antflow:0.1.13
        imagePullPolicy: IfNotPresent
        name: antflow
        ports:
        - containerPort: 8000
          name: 8000tcp01
          protocol: TCP
        resources: {}
        securityContext:
          allowPrivilegeEscalation: false
          capabilities: {}
          privileged: false
          readOnlyRootFilesystem: false
          runAsNonRoot: false
        stdin: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        tty: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: 2018-06-08T03:58:11Z
    lastUpdateTime: 2018-06-08T03:58:11Z
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: 2018-06-08T03:58:08Z
    lastUpdateTime: 2018-06-12T09:09:45Z
    message: ReplicaSet "antflow-67676ccb45" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 10
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
